--- a/css/main.css
+++ b/css/main.css
@@ -120,7 +120,7 @@ body {
 
 @media screen and (max-width: 320px) {
   .container {
-    width: 100%;
+    width: 320px;
     margin: 0 auto;
     padding: 0;
   }
@@ -151,9 +151,11 @@ body {
     font-size: 18px;
     line-height: 18px;
     letter-spacing: 2px;
+    margin: 0 auto;
   }
   .each {
     width: 268px;
+    margin: 0 auto;
     font-weight: normal;
     font-size: 14px;
     line-height: 16px;
@@ -170,12 +172,19 @@ body {
   hr {
     width: 100%;
   }
+  #main {
+    width: 320px;
+    height: 100vh;
+  }
   .main__img {
     width: 100%;
     height: 273px;
   }
   .main__menu {
     width: 320px;
+  }
+  .hero__menu {
+    width: 100%;
   }
 }
 
