--- a/scss/block/_header.scss
+++ b/scss/block/_header.scss
@@ -77,7 +77,7 @@
 
 @media screen and (max-width: 320px) {
     .container {
-        width: 100%;
+        width: 320px;
         margin: 0 auto;
         padding: 0;
     }
@@ -112,11 +112,13 @@
         font-size: 18px;
         line-height: 18px;
         letter-spacing: 2px;
+        margin: 0 auto;
     }
 
 
     .each {
         width: 268px;
+        margin: 0 auto;
         font-weight: normal;
         font-size: 14px;
         line-height: 16px;
@@ -137,6 +139,11 @@
         width: 100%;
     }
 
+    #main{
+        width: 320px;
+        height: 100vh;
+    }
+
     .main__img {
         width: 100%;
         height: 273px;
@@ -144,5 +151,9 @@
 
     .main__menu{
         width: 320px;
+    }
+
+    .hero__menu{
+        width: 100%;
     }
 }
